Adding USB OTG PHY support for A20-OlinuXino-LIME2

--- a/arch/arm/boot/dts/sun7i-a20-olinuxino-lime2.dts
+++ b/arch/arm/boot/dts/sun7i-a20-olinuxino-lime2.dts
@@ -68,7 +68,18 @@
 			status = "okay";
 		};
 
+		usb_otg: usb@01c13000 {
+			pinctrl-names = "default";
+			pinctrl-0 = <&usb0_id_detect_pin
+				    &usb0_vbus_detect_pin>;
+			dr_mode = "otg";
+			id_det-gpios = <&pio 7 4 GPIO_ACTIVE_HIGH>; /* PH4 */
+			vbus_det-gpios = <&pio 7 5 GPIO_ACTIVE_HIGH>; /* PH5 */
+			status = "okay";
+		};
+
 		usbphy: phy@01c13400 {
+			usb0_vbus-supply = <&reg_usb0_vbus>;
 			usb1_vbus-supply = <&reg_usb1_vbus>;
 			usb2_vbus-supply = <&reg_usb2_vbus>;
 			status = "okay";
@@ -101,6 +112,27 @@
 				allwinner,function = "gpio_out";
 				allwinner,drive = <SUN4I_PINCTRL_10_MA>;
 				allwinner,pull = <SUN4I_PINCTRL_NO_PULL>;
+			};
+
+			usb0_id_detect_pin: usb0_id_detect_pin@0 {
+				allwinner,pins = "PH4";
+				allwinner,function = "gpio_in";
+				allwinner,drive = <0>;
+				allwinner,pull = <0>;
+			};
+
+			usb0_vbus_detect_pin: usb0_vbus_detect_pin@0 {
+				allwinner,pins = "PH5";
+				allwinner,function = "gpio_in";
+				allwinner,drive = <0>;
+				allwinner,pull = <0>;
+			};
+
+			usb0_vbus_pin_a: usb0_vbus_pin@0 {
+				allwinner,pins = "PC17";
+				allwinner,function = "gpio_out";
+				allwinner,drive = <0>;
+				allwinner,pull = <0>;
 			};
 
 			led_pins_olinuxinolime: led_pins@0 {
@@ -211,6 +243,12 @@
 	reg_ahci_5v: ahci-5v {
 		pinctrl-0 = <&ahci_pwr_pin_olinuxinolime>;
 		gpio = <&pio 2 3 GPIO_ACTIVE_HIGH>;
+		status = "okay";
+	};
+
+	reg_usb0_vbus: usb0-vbus {
+		pinctrl-0 = <&usb0_vbus_pin_a>;
+		gpio = <&pio 2 17 GPIO_ACTIVE_HIGH>;
 		status = "okay";
 	};
 
